# lab-k8s-fundamentals

./: .dockerignore  .eduk8signore  .gitignore  CREDITS.md  Dockerfile  Makefile  README.md
.github/workflows/: publish-frontend.yaml  publish-workshop.yaml
exercises/database/: deployment.yaml
exercises/frontend/: deployment.yaml
exercises/frontend-src/: posts.json  requirements.txt
exercises/frontend-v1/: deployment.yaml
exercises/frontend-v2/: deployment.yaml
exercises/frontend-v4/: deployment.yaml
exercises/frontend-v5/: deployment.yaml
projects/frontend/: Dockerfile  Justfile  README.md  app.sh  cronjobs.py  pyproject.toml  requirements.txt  start-app.sh
projects/frontend/.warpdrive/action_hooks/: build  deploy
projects/frontend/blog/: urls.py
projects/frontend/frontend/: settings.py  urls.py
resources/: training-portal.yaml  trainingportal.yaml  workshop.yaml
templates/: schema.yaml
templates/database/: deployment.yaml
templates/frontend/: deployment.yaml
templates/frontend-v1/: deployment.yaml
templates/frontend-v2/: deployment.yaml
templates/frontend-v3/: deployment.yaml
templates/frontend-v4/: deployment.yaml  ingress.yaml
templates/frontend-v5/: deployment.yaml
workshop/: modules.yaml  workshop.yaml
workshop/content/: 00-workshop-overview.md  01-accessing-the-cluster.md  02-deploying-an-application.md  03-creating-the-resources.md  04-querying-the-resources.md  05-labelling-of-resources.md  06-deployment-resource.md  07-replicasets-and-pods.md  08-replicas-and-scaling.md  09-pods-and-containers.md  99-workshop-summary.md  (+9 more)
(+18 files in other folders)
