[project]
name = "frontend"
version = "0.1.0"
description = "Sample Django application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi==2025.4.26",
    "chardet==5.2.0",
    "click==8.2.1",
    "dj-database-url==3.0.0",
    "django==4.2.21",
    "idna==3.10",
    "mod-wsgi==5.0.2",
    "pillow==10.4.0",
    "psycopg2-binary==2.9.10",
    "pytz==2025.2",
    "requests==2.32.3",
    "schedule==1.2.2",
    "urllib3==2.4.0",
]
